public/styles.css
*{
    font-family: Arial, Helvetica, sans-serif;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}
#inputs{
    display: flex;
    justify-content: center;
    width: 100%;
}
#inputs input{
    margin: 10px;
    font-size: x-large;
    width: calc(100% - 20px);
    max-width: 600px;
    height: 80px;
    border-radius: 20px;
    border: 2px gray solid;
    box-shadow: 0px 0px 5px black;
}
canvas{
    border-radius: 5px;
}
#info{
    text-align: center;
    font-size: x-large;
    width: 100%;
}
#canvas-container{
    display: flex;
    justify-content: center;
}
@media (max-width: 600px) {
  #inputs {
    flex-direction: column;
  }
}
.notification{
    width: 100%;
    font-size: xx-large;
    padding: 10px;
    background-color: #aaa;
    position: absolute;
    border-right: 2px #111111 solid;
    border-bottom: 2px #111111 solid;
    border-radius: 0 0 25px 0; 
    box-shadow: 0px 5px 10px black;
}
.notification button {
    font-size: x-large;
    color: white;
    background-color: #ff4747;
    width: 50px;
    height: 50px;
    margin-left: calc(100% - 50px);
    border-radius: 50%;
    border: 2px #ff8b8b solid;
}
.matchEndBanner{
    font-size: xx-large;
    text-align: center;
    box-shadow: 0px 0px 20px black;
    background-color: white;
    width: 100%;
    height: 100%;
    max-width: 600px;
    max-height: 600px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    border-radius: 20px;
    border: 2px #aaa solid;
}
.matchEndBanner button {
    width: 300px;
    height: 80px;
    border-radius: 20px;
    background-color: #ffff;
    font-size: xx-large;
}
.matchEndBanner .description {
    width: 100%;
    padding: 20px;
}
.matchEndBanner img {
    width: 50%;
    height: auto;
}
.matchEndBanner .description h1{
    margin-bottom: 20px;
}

